# libosmoplutosdr

./: AUTHORS  CMakeLists.txt  README
include/: CMakeLists.txt  osmoplutosdr.h  osmoplutosdr_export.h
src/: CMakeLists.txt  libosmoplutosdr.c  osmo_pluto.c
